@@ -596,11 +596,6 @@
 
 #{TERRAIN_BASE       ~                 fog}
 
-
-#This one is to fill the "gaps" at the map edges. There are no
-#non-multihex mountains so hills fit better
-{TERRAIN_BASE       Mm                  hills-variation1}
-
 #{CANYON X canyon}
 #added ruins
 
